# xovi

./: .gitignore  CMakeLists.txt  README.MD  make_rmpp_aarch64  make_shared_rmpp_aarch64
.github/workflows/: build-release.yml  build.yml
example-extension/: example.xovi  header.h  main.c
src/: debug.h  dynamiclinker.c  dynamiclinker.h  external.h  hash.c  hash.h  main.c  metadata.c  metadata.h  system.h
src/trampolines/: archdepend.h  mock.c  trampolines.h
src/trampolines/aarch64/: aarch64.c  aarch64.h  untrampoline.S
src/trampolines/arm32/: arm32.c  arm32.h  untrampoline.S
src/trampolines/arm64/: arm64.c  arm64.h  untrampoline.S
src/trampolines/armv7/: armv7.c  armv7.h  untrampoline.S
util/: xovigen.py
